# oracle-omega

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
docs/: benchmark_analytics.md  benchmark_experiments.md  check_catalog.md  concept.md  counterfactual_repair.md  experiment_index.md  experiment_runs.md  external_adapters.md  release_validation.md  replay_contract.md  research_questions.md  research_suite.md  roadmap.md  robustness_theater.md  robustness_visualization_bundle.md  uncertainty_robustness.md
oracle/: __init__.py
oracle/rules/: starter_rules.yaml
oracle/scenarios/: README.md  example_corridor_speed_review.yaml  example_path_pass.yaml  example_path_review.yaml
src/oracle_omega/: benchmark_analytics.py  benchmark_analytics_cli.py  benchmark_claims.py  benchmark_claims_cli.py  benchmark_experiments.py  benchmark_experiments_cli.py  buffered_repair.py  cli.py  evaluate.py  experiment.py  experiment_cli.py  experiment_index.py  experiment_index_cli.py  io_helpers.py  repair.py  (+11 more)
tests/: test_benchmark_analytics.py  test_benchmark_experiments.py  test_buffered_repair.py  test_case_runner.py  test_experiment.py  test_experiment_index.py  test_horizons_adapter.py  test_physics_checks.py  test_repair.py  test_replay.py  test_robustness.py  test_robustness_bundle.py  test_robustness_theater_static_contract.py  test_rule_file.py  test_scenario_validation.py  test_spatial_checks.py  test_suite_runner.py  test_theater_static_contract.py  test_validate_release.py
web/: README.md  index.html  package.json  robustness.html
(+21 files in other folders)
